# fsdbench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
fsdbench/: __init__.py  __main__.py  agent.py  api.py  cli.py  discovery.py  event_logger.py  scorer.py  server.py
scripts/: run_easy.sh  run_hard.sh
